Fixed safari overflow bug

--- a/common.css
+++ b/common.css
@@ -59,21 +59,28 @@ body {
 .navbar-light .nav-item:hover .nav-link,
 .navbar-light .nav-item:active .nav-link,
 .navbar-light .nav-item:focus .nav-link {
-    font-family: AvenirNext;
-    font-weight: bold;
-    font-size: 14pt;
+  font-family: AvenirNext;
+  font-weight: bold;
+  font-size: 14pt;
 }
 
 .navbar-custom .navbar-toggler,
 .navbar-custom .navbar-toggler:active,
 .navbar-custom .navbar-toggler:focus,
 .navbar-custom .navbar-toggler:visited {
-    border: none;
-    outline: none;
+  border: none;
+  outline: none;
 }
 
 #footer {
   background-color: transparent;
   color: rgb(170, 170, 170);
   font-size: 20px;
+}
+
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+  #footer {
+    font-size: 12pt;
+  }
 }
